Gives Blockly editor and preview more screen width. Collapses new trialObject dialog into dropdown. Moves preview to correct place on the screen.

--- a/app/experiment_editor/styles/blockedit.styl
+++ b/app/experiment_editor/styles/blockedit.styl
@@ -1,8 +1,11 @@
 #block_editor
     width 50%
 
+#trialObjectToolbar
+    margin-bottom 10px
+
 .trialObjectToolItem
-    width 100%
+    width 90%
     margin 10px
 
 .trialObject
@@ -11,3 +14,6 @@
 
 #block-code
     height 500px
+
+#block-preview
+    text-align center
