--- a/app/experiment_editor/styles/experimentedit.styl
+++ b/app/experiment_editor/styles/experimentedit.styl
@@ -1,7 +1,11 @@
 #experiment_info
+    margin auto
+    width 25%
     background-color white
 
 #blocks
+    margin auto
+    width 80%
     height 50px
     background-color white
     margin-bottom 10px
@@ -29,3 +33,5 @@
 
 #scrubber
     width 400px
+    margin auto
+    margin-top 5px
